# panda3d-module-builder

./: .gitignore  LICENSE  README.md  config.ini  pyproject.toml  setup.py
.github/actions/build-module/: action.yml
.github/actions/prepare-panda3d/: action.yml
.github/workflows/: ci.yml
